<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/dashboardHome"
            android:icon="@mipmap/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/myProfile"
            android:icon="@mipmap/my_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/history"
            android:icon="@mipmap/history"
            android:title="@string/history" />

        <!--<item
            android:id="@+id/offers"
            android:icon="@mipmap/app_offers"
            android:title="@string/app_offers" />
-->
        <item
            android:id="@+id/rate"
            android:icon="@mipmap/rates"
            android:title="@string/rate_card" />
    </group>

    <item android:title="@string/all_labels">

        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@mipmap/settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/about_us"
                android:icon="@mipmap/about_us"
                android:title="@string/about_us"/>

            <item
                android:id="@+id/contact_us"
                android:icon="@mipmap/contact_us"
                android:title="@string/contact_us"/>

            <item
                android:id="@+id/faqs"
                android:icon="@mipmap/faqs"
                android:title="@string/faqs"/>

            <item
                android:id="@+id/logout"
                android:icon="@mipmap/logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>