<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/signin"
        android:icon="@mipmap/my_profile"
        android:title="@string/login_register" />

    <item
        android:id="@+id/offers"
        android:icon="@mipmap/app_offers"
        android:title="@string/app_offers" />

    <item
        android:id="@+id/rate"
        android:icon="@mipmap/rates"
        android:title="@string/rate_card" />

    <item android:title="@string/all_labels">

        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@mipmap/settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/about_us"
                android:icon="@mipmap/about_us"
                android:title="@string/about_us"/>

            <item
                android:id="@+id/contact_us"
                android:icon="@mipmap/contact_us"
                android:title="@string/contact_us"/>

            <item
                android:id="@+id/faqs"
                android:icon="@mipmap/faqs"
                android:title="@string/faqs"/>
        </menu>
    </item>

</menu>