<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinnerAppliances"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="25dip"
        app:ms_alignLabels="false"
        app:ms_arrowColor="@color/colorPrimary"
        app:ms_arrowSize="16dip"
        app:ms_baseColor="@color/colorPrimary"
        app:ms_enableFloatingLabel="true"
        app:ms_errorColor="@color/colorElectrical"
        app:ms_floatingLabelColor="#000000"
        app:ms_floatingLabelText="@string/appliance"
        app:ms_highlightColor="@color/colorPrimary"
        app:ms_hint="@string/appliance"
        app:ms_hintColor="#a9a9a9"
        app:ms_thickness="1dip">

    </fr.ganfra.materialspinner.MaterialSpinner>

    <com.neopixl.pixlui.components.edittext.EditText
        android:id="@+id/etIssueDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="25dip"
        android:alpha="0.7"
        android:gravity="top"
        android:hint="@string/appliance_issue"
        android:maxLines="10"
        android:minLines="8"
        android:padding="10dip"
        android:singleLine="false" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
