<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33c5cae9">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


    <!--    <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="20dip"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="48sp" />
-->
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:src="@mipmap/logo_temp"
            android:layout_marginTop="30dip"/>

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="64dip"
            android:background="@color/colorPrimaryLight"
            android:elevation="4dip"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="3dip"
            android:background="@color/colorPrimaryLight"
            android:elevation="4dip"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dip"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dip"
            android:text="@string/forgot_password"
            android:clickable="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dip"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24sp" />


    </RelativeLayout>

</ScrollView>
