<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:id="@+id/relative_layout">

    <!--<include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>-->

    <!--<ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dip"
        android:src="@mipmap/img_logo" />-->

    <!-- <com.neopixl.pixlui.components.textview.TextView
         android:id="@+id/txtTechHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TechHome"
         android:textSize="55sp"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:padding="10dip"
         android:layout_marginTop="90dip"
         android:layout_centerHorizontal="true"/>
 -->

    <com.neopixl.pixlui.components.imageview.ImageView
        android:id="@+id/imgHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:src="@mipmap/logo_temp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgHome"
        android:layout_marginBottom="15dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="60dip"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@color/white_smoke"
        android:textSize="15dip" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtor"
        android:layout_marginBottom="15dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/rounded_button"
        android:text="@string/registration"
        android:textColor="@color/white_smoke"
        android:textSize="15dip" />

    <View
        android:id="@+id/viewline1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/btnLogin"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="20dip"
        android:layout_toLeftOf="@+id/txtor"
        android:background="@color/colorPrimary" />

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/txtor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/or"
        android:textColor="#000000"
        android:textSize="20dip"
        android:textStyle="bold" />

    <View
        android:id="@+id/viewline2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/btnLogin"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="20dip"
        android:layout_toRightOf="@+id/txtor"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/btnGuest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/guest_login"
        android:textColor="@color/white_smoke"
        android:textSize="15dip" />


</RelativeLayout>
